--- a/Ripe Of Passage/Ripe Of Passage.CSharp.csproj
+++ b/Ripe Of Passage/Ripe Of Passage.CSharp.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Assets\Scripts\PlayerController.cs" />
     <Compile Include="Assets\Scripts\PlayerMovement.cs" />
     <Compile Include="Assets\Scripts\Shooting.cs" />
+    <Compile Include="Assets\SpriteOrientation.cs" />
     <Compile Include="Assets\unity-movement-ai\Scripts\ArriveUnit.cs" />
     <Compile Include="Assets\unity-movement-ai\Scripts\Camera\CameraMovement.cs" />
     <Compile Include="Assets\unity-movement-ai\Scripts\Camera\InfiniteGrid.cs" />
