--- a/Ripe Of Passage/Assembly-CSharp.csproj
+++ b/Ripe Of Passage/Assembly-CSharp.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
      <Compile Include="Assets\Scripts\Bullet.cs" />
      <Compile Include="Assets\Scripts\CameraController.cs" />
+     <Compile Include="Assets\Scripts\EnemyDeath.cs" />
      <Compile Include="Assets\Scripts\EnemyPathFollowing.cs" />
      <Compile Include="Assets\Scripts\FleeingBehavior.cs" />
      <Compile Include="Assets\Scripts\OffsetPursuitBehavior.cs" />
